# faircausal

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/faircausal/: __init__.py  cli.py
src/faircausal/data/: CausalDataReader.py  _BuildCausalModel.py  __init__.py
src/faircausal/optimizing/: ObjectFunctions.py  Optimizing.py  __init__.py
src/faircausal/utils/: Dag.py  Data.py  Evaluation.py  Helpers.py  Metrics.py  __init__.py
src/faircausal/visualization/: CausalGraph.py  OutcomeDistribution.py  __init__.py
tests/: __init__.py  test_faircausal.py
