[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faircausal"
version = "0.1.0"
description = "A Causal Approach to Fair Predictive Modeling via Penalized Maximum Likelihood Estimation."
readme = "README.rst"
authors = [
    { name = "William Qian", email = "william.z.qian@gamil.com" }
]
maintainers = [
    { name = "William Qian", email = "william.z.qian@gamil.com" }
]
classifiers = [

]
license = { text = "MIT license" }
dependencies = [
    "typer",
    "scikit-learn",
    "seaborn",
    "scipy",
    "numpy",
    "networkx",
    "matplotlib",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "coverage", # testing
    "mypy", # linting
    "pytest", # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/dukechain2333/faircausal/issues"
changelog = "https://github.com/dukechain2333/faircausal/blob/master/changelog.md"
homepage = "https://github.com/dukechain2333/faircausal"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

